Kuberntes_Deployments/ingress-api-service.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  namespace: api
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    # nginx.ingress.kubernetes.io/use-regex: 'true'
    # nginx.ingress.kubernetes.io/rewrite-target: /$1
    # nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /api/user
            pathType: Prefix
            backend:
              serviceName: userprofile-service
              servicePort: 80
          - path: /api/user-java
            pathType: Prefix
            backend:
              serviceName: userjava-service
              servicePort: 80
          - path: /api/poi
            pathType: Prefix
            backend:
              serviceName: poi-service
              servicePort: 80
          - path: /api/trips
            pathType: Prefix
            backend:
              serviceName: trips-service
              servicePort: 80

# http://13.64.156.8:80 -> Trips Viwer

# http://13.64.156.8/api/user/healthcheck:80 - > userprofile

#               Invoke-WebRequest http://localhost:8083/api/user/healthcheck
# Invoke-WebRequest http://localhost:8082/api/user-java/healthcheck
# Invoke-WebRequest http://localhost:8081/api/trips/healthcheck
# Invoke-WebRequest http://localhost:8080/api/poi/healthcheck
